2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::doFileIO): Don't flag problem if
	instruction is IDLE.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::pendingStop): Remove debug message.
	(GdbServer::markPendingStops): Likewise.
	(GdbServer::removePendingStop): Likewise.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::markPendingStops): Also remove
	pending stop for exclusion thread. Reduce debug messages.
	(GdbServer::doContinue): No need to remove pending stop - done by
	calling method.
	(GdbServer::getStopInstr): Remove debug message.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::doContinue): Remove pending stop
	when deal with breakpoint.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::markPendingStops): Mark iterated
	thread, not exclusion thread.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::markPendingStops): Use iterated
	thread, not exclusion thread for check.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::getStopInstr): More detailed error
	message.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::markPendingStops): More debug
	messages.
	(GdbServer::getStopInstr): Likewise.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::pendingStop): Added
	debug message.
	(GdbServer::markPendingStops): Likewise.
	(GdbServer::removePendingStop): Likewise.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	*  src/GdbServer.cpp (GdbServer::doFileIO): Print instruction on
	problem.

2014-03-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp: Pass thread, not thread ID to
	redirectStdioOnTrap throughout.